# UniversalLoaderSDK

./: CHECKLIST.md  DEPLOY.md  README.md  build.gradle  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  gradlew  gradlew.bat  metadata.json  package-lock.json  settings.gradle
.github/workflows/: android-build.yml  build.yml
admin/: admin.js  dashboard.html  index.html  style.css
admin/data/: config.json  customers.json  sales.json
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: metadata.json  sandbox_config.json
app/src/main/cpp/: CMakeLists.txt  dobby.c  memory.cpp  native_hook.cpp  native_injector.cpp
app/src/main/res/layout/: activity_launcher.xml  item_app.xml
loader/: build.gradle
loader/src/main/: AndroidManifest.xml
loader/src/main/res/drawable/: bg_badge_active.xml  bg_badge_success.xml  btn_launch_glowing.xml  ios_glass_bg.xml
loader/src/main/res/layout/: activity_license.xml  activity_main.xml  activity_settings.xml  activity_status.xml  floating_menu.xml
sdk/: build.gradle
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: BinderHook.cpp  BinderHook.h  CMakeLists.txt  dobby.h  memory.cpp  native_hook.cpp
sdk/src/main/cpp/Hook/: DexFileHook.cpp  DexFileHook.h  RenderingHook.cpp  RenderingHook.h  RuntimeHook.cpp  RuntimeHook.h  SocketHook.cpp  SocketHook.h  UnixFileSystemHook.cpp  UnixFileSystemHook.h
sdk/src/main/cpp/JniHook/: JniHook.cpp  JniHook.h
sdk/src/main/cpp/KittyMemory/: KittyMemory.cpp  KittyMemory.h  MemoryPatch.cpp  MemoryPatch.h
sdk/src/main/cpp/Utils/: EnvironmentProtector.cpp  EnvironmentProtector.h  HiddenApiBypass.cpp  HiddenApiBypass.h  KernelShield.cpp  KernelShield.h  ModuleScanner.cpp  ModuleScanner.h  RecursionGuard.cpp  RecursionGuard.h  Stealth.cpp  Stealth.h  fake_dlfcn.cpp  fake_dlfcn.h
server/: verify.php
src/: App.tsx  index.css
src/components/: Dashboard.tsx  Layout.tsx  Login.tsx  Settings.tsx  TaskList.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx
src/lib/: auth.tsx  firebase.ts
src/services/: taskService.ts  userService.ts
(+216 files in other folders)
